--- a/social-media.html
+++ b/social-media.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- add a link to your stylesheet -->
+        <link rel="stylesheet" href="styles.css">
+        <!-- delete the following line -->
+        <style>img{width:50px}</style>
     </head>
 
     <body>
