--- a/social-media.html
+++ b/social-media.html
@@ -7,8 +7,6 @@
               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- add a link to your stylesheet -->
         <link rel="stylesheet" href="styles.css">
-        <!-- delete the following line -->
-        <style>img{width:50px}</style>
     </head>
 
     <body>
@@ -16,7 +14,7 @@
             <nav>
                 <span>
                     <a href="#home" class="fa fa-home" title="Home Page"></a>
-                    <a href="#news" class="fa fa-globe" title="News"</a>
+                    <a href="#news" class="fa fa-globe" title="News"></a>
                     <a href="#messages" class="fa fa-envelope" title="Messages"></a>
                 </span>
                 <span>
@@ -30,9 +28,9 @@
         <main>
             <div id="gridholder">
                 <!-- leftmost column -->
-                <div class="column personal"">
+                <div class="column personal">
                     <!-- profile -->
-                    <article class="profile">
+                    <article class="profile card">
                         <section>
                             <h2>Jane Doe</h2>
                             <h2><img src="images/avatar6.png"></h2>
@@ -47,7 +45,7 @@
                     </article>
 
                     <!-- my stuff -->
-                    <article class="highlights">
+                    <article class="highlights card">
                         <section class="profile-points">
                             <ul>
                                 <li><a href="#">My Groups</a></li>
@@ -58,7 +56,7 @@
                     </article>
 
                     <!-- interests -->
-                    <article class="interests">
+                    <article class="interests card">
                         <section>
                             <h3>Interests</h3>
                                 <ul>
