Added roush columns and box outlines

--- a/social-media.html
+++ b/social-media.html
@@ -30,7 +30,7 @@
                 <!-- leftmost column -->
                 <div class="column personal">
                     <!-- profile -->
-                    <article class="profile card">
+                    <article class="profile">
                         <section>
                             <h2>Jane Doe</h2>
                             <h2><img src="images/avatar6.png"></h2>
@@ -45,7 +45,7 @@
                     </article>
 
                     <!-- my stuff -->
-                    <article class="highlights card">
+                    <article class="highlights">
                         <section class="profile-points">
                             <ul>
                                 <li><a href="#">My Groups</a></li>
@@ -56,7 +56,7 @@
                     </article>
 
                     <!-- interests -->
-                    <article class="interests card">
+                    <article class="interests">
                         <section>
                             <h3>Interests</h3>
                                 <ul>
