--- a/social-media.html
+++ b/social-media.html
@@ -15,7 +15,16 @@
                 <span>
                     <a href="#home" class="fa fa-home" title="Home Page"></a>
                     <a href="#news" class="fa fa-globe" title="News"></a>
-                    <a href="#messages" class="fa fa-envelope" title="Messages"></a>
+                    <a href="#messages" class="fa fa-envelope dropdown" title="Messages">
+                        <div class="dropdown">
+                            <div class="dropdown-content">
+                                <p>One new friend request</p>
+                                <p>John Doe posted on your wall</p>
+                                <p>Jane likes your post</p>
+                            </div>
+                            <span class="badge">3</span>
+                        </div>
+                    </a>
                 </span>
                 <span>
                     <a href="#profile" id="profile-button">
